Feat : 정책 유형검사 UI 구현

--- a/src/assets/styles/colors.css
+++ b/src/assets/styles/colors.css
@@ -35,6 +35,7 @@
   --text-bluegray: #6b7280;
   --text-lightgray: #999999;
   --text-login: #1f2937;
+  --text1: #9ca3af;
 
   /* =============================
      Alert / Notification Colors
