--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -18,6 +18,9 @@ body {
   background-color: var(--input-bg-2);
   overflow-x: hidden;
   overflow-y: auto;
+  /*빈: 스크롤 숨기기*/
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE/Edge */
 }
 
 /* 공통 레이아웃 박스 */
