--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -17,6 +17,7 @@ body {
   min-height: 100vh;
   background-color: var(--input-bg-2);
   overflow-x: hidden;
+  padding: 20px;
   overflow-y: auto;
 }
 
