Feat: 신청조건, 신청방법 탭 UI 구현, 공유하기 모달창 UI 구현

--- a/src/assets/styles/colors.css
+++ b/src/assets/styles/colors.css
@@ -47,6 +47,7 @@
   --alert-strong: #cf5959;
   --alert-light-1: #f2a9a9;
   --alert-light-2: #f9dada;
+  --alert-light-3: #fef2f2;
 
   --input-outline: #f1f5f9;
   --input-outline-2: #e5e7eb;
