--- a/src/assets/styles/fonts.css
+++ b/src/assets/styles/fonts.css
@@ -103,6 +103,9 @@
 .font-10 {
   font-size: 10px;
 }
+.font-11 {
+  font-size: 11px;
+}
 .font-12 {
   font-size: 12px;
 }
@@ -112,8 +115,14 @@
 .font-14 {
   font-size: 14px;
 }
+.font-15 {
+  font-size: 15px;
+}
 .font-16 {
   font-size: 16px;
+}
+.font-17 {
+  font-size: 17px;
 }
 .font-18 {
   font-size: 18px;
