--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -19,7 +19,7 @@ body.modal-open {
 /* app 사이즈 */
 #app {
   width: 474px;
-  margin: 0 auto;
+  margin: 0;
   min-height: 100vh;
   background-color: var(--input-bg-2);
   overflow-x: hidden;
