--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -19,8 +19,9 @@ body.modal-open {
 /* app 사이즈 */
 #app {
   width: 390px;
+  height: 844px;
   margin: 0;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   background-color: var(--input-bg-2);
   overflow-x: hidden;
   padding: 20px;
@@ -34,6 +35,7 @@ body.modal-open {
 .container {
   width: 100%;
   max-width: 390px;
+  max-height: 844px;
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box;
